dfir_rs/tests/compile-fail-stable/surface_port_naked_overwrite_knot_a.stderr
error: Indexing on output is overwritten below (unknown:13:14) (1/2).
  --> tests/compile-fail-stable/surface_port_naked_overwrite_knot_a.rs:10:23
   |
10 |         out_0 = pivot[0];
   |                       ^

error: Cannot index on already-indexed output, previously indexed above (unknown:10:22) (2/2).
  --> tests/compile-fail-stable/surface_port_naked_overwrite_knot_a.rs:13:15
   |
13 |         out_0[0] -> inn_0; // Error: `pivot[0][0]`
   |               ^
